# tg_stream_service

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
compose/: Dockerfile  docker-compose.yml
config/: config.example.yml  schema.py
